--- a/docs/makeitlit.css
+++ b/docs/makeitlit.css
@@ -1,18 +1,43 @@
 .viewer-rapper {
     width: 100%;
-    
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .pdf-page {
-    min-height: 300px;
-    min-width: 200px;
+    min-height: 400px;
+    min-width: 400px;
 }
 
-.page-loader {
-    width: 100%;
-    height: 100%;
-    background: red;
+.lector-page {
+    border-radius: 3px;
 }
+
+.lector-page.loading {
+    width: 500px;
+    height: 600px;
+    background: rgba(255, 255, 255, 0.077);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pragma-loader {
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      width: 40px;
+      height: 40px;
+  
+}
+.pragma-loader div {
+      width: 10px;
+      height: 10px;
+      border: 1px solid #FFF;
+      background-color: #FFF;
+}
+
+
