--- a/src/styles/default_theme.scss
+++ b/src/styles/default_theme.scss
@@ -53,14 +53,14 @@ body {
 .word-element {
     mix-blend-mode: darken !important;
 
-    &.hover-0 {
-        filter: blur(14px);
-    }
-    &.hover-1 {
-        filter: blur(18px);
-    }
-    &.hover-2 {
-        filter: blur(22px);
-    }
+    //&.hover-0 {
+        //filter: blur(14px);
+    //}
+    //&.hover-1 {
+        //filter: blur(18px);
+    //}
+    //&.hover-2 {
+        //filter: blur(22px);
+    //}
 
 }
