--- a/src/styles/basic.scss
+++ b/src/styles/basic.scss
@@ -5,7 +5,7 @@
 	right: 0;
 	bottom: 0;
 	// opacity: 0.1;
-	line-height: 1;
+	//line-height: 1;
 	>span {
 		color: transparent;
 		position: absolute;
