algo to ignore header elements

--- a/src/styles/basic.scss
+++ b/src/styles/basic.scss
@@ -13,6 +13,10 @@
 		white-space: pre;
 		cursor: text;
 		transform-origin: 0% 0%;
+		border: 1px solid green;
+		&.ignore {
+			border-color: red;
+		}
 	}
 	.highlight {
 		margin: -1px;
